doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_21\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld
-d
C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\FinalFantasy\worldObjects\Portal.java
<---- end of javadoc command ---->
Loading source file C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\FinalFantasy\worldObjects\Portal.java...
Constructing Javadoc information...
C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\FinalFantasy\worldObjects\Portal.java:11: error: cannot find symbol
    privateRPGGrid grid;
    ^
  symbol:   class privateRPGGrid
  location: class Portal
C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\FinalFantasy\worldObjects\Portal.java:17: error: cannot find symbol
    public Portal(RPGGrid g)
                  ^
  symbol:   class RPGGrid
  location: class Portal
Standard Doclet version 1.7.0_21
Building tree for all the packages and classes...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\FinalFantasy\worldObjects\Portal.html...
C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\FinalFantasy\worldObjects\Portal.java:17: warning - @param argument "g:" is not a parameter name.
C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\FinalFantasy\worldObjects\Portal.java:26: warning - @param argument "p:" is not a parameter name.
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\FinalFantasy\worldObjects\package-frame.html...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\FinalFantasy\worldObjects\package-summary.html...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\allclasses-frame.html...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\allclasses-noframe.html...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\index.html...
Generating C:\Users\Dangeresque\Documents\GitHub\FinalFantasyGridWorld\doc\stylesheet.css...
4 warnings
